@@ -5,7 +5,7 @@ import java.util.List;
 
 /**
  * The PropertyType enum represents the type of a Property.
- * It provides several constants representing different types of properties, such as GREATERNUMERIC, GREATERDATE, EQUAL, LIKE, REGEX, and RANGENUMERIC.
+ * It provides several constants representing different types of properties, such as GREATER_NUMERIC, GREATER_DATE, EQUAL, LIKE, REGEX, and RANGE_NUMERIC.
  * <p>
  * The enum provides two static methods: getNumericTypes and getDateTypes.
  * The getNumericTypes method returns a list of PropertyType constants that represent numeric types.
@@ -13,18 +13,18 @@ import java.util.List;
  * <p>
  * Example usage:
  * <p>
- * PropertyType type = PropertyType.GREATERNUMERIC;  // Represents a numeric property with a "greater than" condition
+ * PropertyType type = PropertyType.GREATER_NUMERIC;  // Represents a numeric property with a "greater than" condition
  */
 public enum PropertyType {
-    GREATERNUMERIC,
-    GREATERDATE,
+    GREATER_NUMERIC,
+    GREATER_DATE,
     EQUAL,
     LIKE,
     REGEX,
-    RANGENUMERIC;
+    RANGE_NUMERIC;
 
-    static final List<PropertyType> numericTypes = Arrays.asList(GREATERNUMERIC, RANGENUMERIC, EQUAL);
-    static final List<PropertyType> dateTypes = List.of(GREATERDATE);
+    static final List<PropertyType> numericTypes = Arrays.asList(GREATER_NUMERIC, RANGE_NUMERIC, EQUAL);
+    static final List<PropertyType> dateTypes = List.of(GREATER_DATE);
 
     /**
      * Returns a list of PropertyType constants that represent numeric types.
